# org-bulk-invite

./: .gitignore  README.md  SPECS.md  env.sample
sample_data/: email_addresses.txt
standalone/: CMakeLists.txt
standalone/source/: main.cpp
